// Vitest Snapshot v1

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`Color\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "Color",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`Quat\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "Quat",
  "sub_properties": [],
  "value": [
    0,
    0,
    0,
    0,
  ],
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`Speed\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "Speed",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`String\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "String",
  "sub_properties": [],
  "value": "",
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`Vec3\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "Vec3",
  "sub_properties": [],
  "value": [
    0,
    0,
    0,
  ],
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`bool\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "bool",
  "sub_properties": [],
  "value": false,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`f32\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "f32",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`f64\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "f64",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`i32\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "i32",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`u8\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "u8",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`u32\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "u32",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`buildDefaultPrimitiveProperty > builds a default primitive value from ptype \`usize\` 1`] = `
{
  "attributes": {},
  "name": "My resource property",
  "ptype": "usize",
  "sub_properties": [],
  "value": 0,
}
`;

exports[`formatProperties > properly formats the properties received from the server 1`] = `
[
  {
    "attributes": {},
    "name": "",
    "ptype": "TestEntity",
    "sub_properties": [
      {
        "attributes": {
          "readonly": "true",
        },
        "name": "test_string",
        "ptype": "String",
        "sub_properties": [],
        "value": "Editable String Value",
      },
      {
        "attributes": {},
        "name": "GroupTest1",
        "ptype": "group",
        "sub_properties": [
          {
            "attributes": {
              "group": "GroupTest1",
            },
            "name": "test_color",
            "ptype": "Color",
            "sub_properties": [],
            "value": 4278190335,
          },
          {
            "attributes": {
              "group": "GroupTest1",
              "hidden": "true",
            },
            "name": "test_position",
            "ptype": "Vec3",
            "sub_properties": [],
            "value": [
              0,
              100,
              0,
            ],
          },
          {
            "attributes": {
              "group": "GroupTest1",
              "tooltip": "Rotation Tooltip",
            },
            "name": "test_rotation",
            "ptype": "Quat",
            "sub_properties": [],
            "value": [
              0,
              0,
              0,
              1,
            ],
          },
        ],
      },
      {
        "attributes": {},
        "name": "GroupTest2",
        "ptype": "group",
        "sub_properties": [
          {
            "attributes": {
              "group": "GroupTest2",
            },
            "name": "test_bool",
            "ptype": "bool",
            "sub_properties": [],
            "value": false,
          },
          {
            "attributes": {
              "group": "GroupTest2",
            },
            "name": "test_float32",
            "ptype": "f32",
            "sub_properties": [],
            "value": 1,
          },
          {
            "attributes": {
              "group": "GroupTest2",
            },
            "name": "test_int",
            "ptype": "i32",
            "sub_properties": [],
            "value": 1337,
          },
        ],
      },
      {
        "attributes": {
          "offline": "true",
        },
        "name": "test_float64",
        "ptype": "f64",
        "sub_properties": [],
        "value": 2,
      },
      {
        "attributes": {},
        "name": "test_blob",
        "ptype": "Vec<u8>",
        "sub_properties": [
          {
            "attributes": {},
            "name": "[0]",
            "ptype": "u8",
            "sub_properties": [],
            "value": 0,
          },
          {
            "attributes": {},
            "name": "[1]",
            "ptype": "u8",
            "sub_properties": [],
            "value": 1,
          },
          {
            "attributes": {},
            "name": "[2]",
            "ptype": "u8",
            "sub_properties": [],
            "value": 2,
          },
          {
            "attributes": {},
            "name": "[3]",
            "ptype": "u8",
            "sub_properties": [],
            "value": 3,
          },
        ],
      },
      {
        "attributes": {},
        "name": "test_sub_type",
        "ptype": "TestSubType1",
        "sub_properties": [
          {
            "attributes": {},
            "name": "test_components",
            "ptype": "Vec<Box<dyn Component>>",
            "sub_properties": [
              {
                "attributes": {},
                "name": "[0]",
                "ptype": "TestComponent",
                "sub_properties": [
                  {
                    "attributes": {},
                    "name": "test_i32",
                    "ptype": "i32",
                    "sub_properties": [],
                    "value": 0,
                  },
                ],
              },
              {
                "attributes": {},
                "name": "[1]",
                "ptype": "TestComponent",
                "sub_properties": [
                  {
                    "attributes": {},
                    "name": "test_i32",
                    "ptype": "i32",
                    "sub_properties": [],
                    "value": 1,
                  },
                ],
              },
              {
                "attributes": {},
                "name": "[2]",
                "ptype": "TestComponent",
                "sub_properties": [
                  {
                    "attributes": {},
                    "name": "test_i32",
                    "ptype": "i32",
                    "sub_properties": [],
                    "value": 2,
                  },
                ],
              },
            ],
          },
          {
            "attributes": {},
            "name": "test_string",
            "ptype": "String",
            "sub_properties": [],
            "value": "",
          },
          {
            "attributes": {},
            "name": "test_sub_type",
            "ptype": "TestSubType2",
            "sub_properties": [
              {
                "attributes": {},
                "name": "test_vec",
                "ptype": "Vec3",
                "sub_properties": [],
                "value": [
                  0,
                  0,
                  0,
                ],
              },
            ],
          },
        ],
      },
      {
        "attributes": {},
        "name": "test_option_set",
        "ptype": "Option<TestSubType2>",
        "sub_properties": [
          {
            "attributes": {},
            "name": "",
            "ptype": "TestSubType2",
            "sub_properties": [
              {
                "attributes": {},
                "name": "test_vec",
                "ptype": "Vec3",
                "sub_properties": [],
                "value": [
                  0,
                  0,
                  0,
                ],
              },
            ],
          },
        ],
      },
      {
        "attributes": {},
        "name": "test_option_none",
        "ptype": "Option<TestSubType2>",
        "sub_properties": [],
      },
      {
        "attributes": {
          "resource_type": "TestEntity",
        },
        "name": "test_resource_path_option",
        "ptype": "Option<ResourcePathId>",
        "sub_properties": [],
      },
      {
        "attributes": {
          "resource_type": "TestEntity",
        },
        "name": "test_resource_path_vec",
        "ptype": "Vec<ResourcePathId>",
        "sub_properties": [],
      },
      {
        "attributes": {},
        "name": "test_option_primitive_set",
        "ptype": "Option<Vec3>",
        "sub_properties": [
          {
            "attributes": {},
            "name": "",
            "ptype": "Vec3",
            "sub_properties": [],
            "value": [
              0,
              0,
              0,
            ],
          },
        ],
      },
      {
        "attributes": {},
        "name": "test_option_primitive_none",
        "ptype": "Option<Vec3>",
        "sub_properties": [],
      },
    ],
  },
]
`;
